--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@types/styled-components": "^5.1.9",
 		"antd": "^4.10.3",
 		"axios": "^0.21.1",
+		"clsx": "^1.1.1",
 		"i18next": "^19.8.4",
 		"i18next-browser-languagedetector": "^6.0.1",
 		"i18next-xhr-backend": "^3.2.2",
