--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.4.1",
 		"@types/node": "^15.6.0",
 		"@types/react": "^17.0.6",
 		"@types/react-dom": "^17.0.5",
@@ -21,14 +22,14 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"styled-components": "^5.2.1",
-		"typescript": "^4.2.4"
+		"typescript": "^4.1.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"eslint:fix": "npx eslint --fix ./src/*"
+		"eslint:fix": "npx eslint --fix ./src/"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -56,5 +57,6 @@
 		"eslint-plugin-react": "^7.24.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"prettier": "^2.3.2"
-	}
+	},
+	"homepage": "."
 }
