--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"i18next": "^19.8.4",
 		"i18next-browser-languagedetector": "^6.0.1",
 		"i18next-xhr-backend": "^3.2.2",
+		"intersection-observer": "^0.12.0",
 		"react": "^17.0.2",
 		"react-awesome-reveal": "^3.7.1",
 		"react-dom": "^17.0.2",
