--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^17.0.2",
 		"react-awesome-reveal": "^3.7.1",
 		"react-dom": "^17.0.2",
+		"react-ga": "^3.3.0",
 		"react-i18next": "^11.8.5",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
